tests/reject/where_bad_tp.ty
fn g(x: $T) -> $T where numeric(Q):
    return x

fn main():
    println(str(g(1)))
